WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75429
ThrowTypeError should be a singleton object
https://bugs.webkit.org/show_bug.cgi?id=75429
Summary
ThrowTypeError should be a singleton object
Gavin Barraclough
Reported
2012-01-02 00:53:11 PST
Per section 13.2.3 of the spec.
Attachments
Fix
(17.86 KB, patch)
2012-01-02 01:07 PST
,
Gavin Barraclough
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2012-01-02 01:07:12 PST
Created
attachment 120868
[details]
Fix
WebKit Review Bot
Comment 2
2012-01-02 01:08:47 PST
Attachment 120868
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 Source/JavaScriptCore/runtime/PropertyDescriptor.h:32: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gavin Barraclough
Comment 3
2012-01-03 13:08:01 PST
Fixed in
r103958
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug