Source/JavaScriptCore/runtime/Error.h
@@ -72,8 +72,6 @@ namespace JSC {
     inline EncodedJSValue throwVMError(ExecState* exec, JSValue error) { return JSValue::encode(throwError(exec, error)); }
     inline EncodedJSValue throwVMTypeError(ExecState* exec) { return JSValue::encode(throwTypeError(exec)); }
 
-    JSValue createTypeErrorFunction(ExecState* exec, const UString& message);
-    
     class StrictModeTypeErrorFunction : public InternalFunction {
     private:
         StrictModeTypeErrorFunction(JSGlobalObject* globalObject, Structure* structure, const UString& message)
